--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-<head>
-    <link rel=“stylesheet” href=“styles.css”>
-</head>
-
-<body>
-    <h1>Hello World!</h1>
-    <h2>Testing</h2>
-</body>
+    <body>
+        <h1>Hello World!</h1>
+        <h2>Testing</h2>
+    </body>
 
 </html>
